Rozpieszczenie elementów poprzez Flexbox, padding i margin.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -13,33 +14,38 @@
   </head>
   <body>
     <header class="menu">
-      <a class="logo" href="index.html"><span class="logo-color">Web</span>Studio</a>
-      <nav>
-        <ul class="nav-list">
-          <li class="nav-list-item">
-            <a class="nav-list-item-link" href="agency.html">Agencja</a>
-          </li>
-          <li class="nav-list-item">
-            <a class="nav-list-item-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-list-item">
-            <a class="nav-list-item-link" href="contact.html">Kontakt</a>
-          </li>
+      <nav class="wrapper main-menu-container">
+        <div class="menu-container">
+          <a class="logo" href="index.html"><span class="logo-color">Web</span>Studio</a>
+          <ul class="nav-list">
+            <li class="nav-list-item">
+              <a class="nav-list-item-link" href="agency.html">Agencja</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-item-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-item-link" href="contact.html">Kontakt</a>
+            </li>
+          </ul>
+        </div>
+
+        <ul class="contact-list menu-container">
+          <li><a class="contact" href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
+          <li><a class="contact" href="tel:+48111111111"> +48 111 111 111 </a></li>
         </ul>
       </nav>
-      <a class="contact" href="mailto:info@devstudio.com"> info@devstudio.com </a>
-      <a class="contact" href="tel:+48111111111"> +48 111 111 111 </a>
     </header>
     <main>
       <section class="main-header-section">
-        <div class="main-header-container">
+        <div class="wrapper main-header-container">
           <h1 class="main-header-text">Efektywne rozwiązania dla waszego biznesu</h1>
           <button class="main-header-button" type="button">Zamów usługę</button>
         </div>
       </section>
 
       <section class="main-description-section">
-        <div class="main-description-container">
+        <div class="wrapper">
           <ul class="main-description-list">
             <li class="main-description-list-item">
               <hgroup>
@@ -80,99 +86,112 @@
           </ul>
         </div>
       </section>
-      <section class="services-section">
+      <section class="wrapper services-section">
         <h2 class="services-section-header">Czym się zajmujemy</h2>
-        <ul class="services-section-list">
-          <li class="services-section-item">
-            <img
-              src="images/service/programingService.jpg"
-              alt="Tworzenie stron internetowych"
-              height="294"
-              width="370"
-            />
-          </li>
-          <li class="services-section-item">
-            <img
-              src="images/service/mocupsService.jpg"
-              alt="Pozycjonowanie stron internetowych"
-              height="294"
-              width="370"
-            />
-          </li>
-          <li class="services-section-item">
-            <img
-              src="images/service/graphicsService.jpg"
-              alt="Grafika i design"
-              height="294"
-              width="370"
-            />
-          </li>
-        </ul>
+        <div>
+          <ul class="services-section-list services-section-container">
+            <li class="services-section-item">
+              <img
+                src="images/service/programingService.jpg"
+                alt="Tworzenie stron internetowych"
+                height="294"
+                width="370"
+              />
+            </li>
+            <li class="services-section-item">
+              <img
+                src="images/service/mocupsService.jpg"
+                alt="Pozycjonowanie stron internetowych"
+                height="294"
+                width="370"
+              />
+            </li>
+            <li class="services-section-item">
+              <img
+                src="images/service/graphicsService.jpg"
+                alt="Grafika i design"
+                height="294"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team-section">
-        <h2 class="team-section-header">Nasz zespół</h2>
-        <ul class="team-section-list">
-          <li class="team-section-item">
-            <figure>
-              <img
-                src="images/employees/productDesigner.jpg"
-                alt="Product Designer"
-                height="260"
-                width="270"
-              />
-              <figcaption>
-                <p class="team-section-name">John Doe</p>
-                <p class="team-section-profession">Product Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="team-section-item">
-            <figure>
-              <img
-                src="images/employees/frontendDeveloper.jpg"
-                alt="Frontend Developer"
-                height="260"
-                width="270"
-              />
-              <figcaption>
-                <p class="team-section-name">John Doe</p>
-                <p class="team-section-profession">Frontend Developer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="team-section-item">
-            <figure>
-              <img src="images/employees/marketing.jpg" alt="Marketing" height="260" width="270" />
-              <figcaption>
-                <p class="team-section-name">John Doe</p>
-                <p class="team-section-profession">Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="team-section-item">
-            <figure>
-              <img
-                src="images/employees/uiDesigner.jpg"
-                alt="UI Designer"
-                height="260"
-                width="270"
-              />
-              <figcaption>
-                <p class="team-section-name">John Doe</p>
-                <p class="team-section-profession">UI Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
+        <div class="wrapper">
+          <h2 class="team-section-header">Nasz zespół</h2>
+          <div>
+            <ul class="team-section-container">
+              <li>
+                <figure class="team-section-item">
+                  <img
+                    src="images/employees/productDesigner.jpg"
+                    alt="Product Designer"
+                    height="260"
+                    width="270"
+                  />
+                  <figcaption>
+                    <p class="team-section-name">John Doe</p>
+                    <p class="team-section-profession">Product Designer</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure class="team-section-item">
+                  <img
+                    src="images/employees/frontendDeveloper.jpg"
+                    alt="Frontend Developer"
+                    height="260"
+                    width="270"
+                  />
+                  <figcaption>
+                    <p class="team-section-name">John Doe</p>
+                    <p class="team-section-profession">Frontend Developer</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure class="team-section-item">
+                  <img
+                    src="images/employees/marketing.jpg"
+                    alt="Marketing"
+                    height="260"
+                    width="270"
+                  />
+                  <figcaption>
+                    <p class="team-section-name">John Doe</p>
+                    <p class="team-section-profession">Marketing</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure class="team-section-item">
+                  <img
+                    src="images/employees/uiDesigner.jpg"
+                    alt="UI Designer"
+                    height="260"
+                    width="270"
+                  />
+                  <figcaption>
+                    <p class="team-section-name">John Doe</p>
+                    <p class="team-section-profession">UI Designer</p>
+                  </figcaption>
+                </figure>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="index.html"><span class="logo-color">Web</span>Studio</a>
-      <address class="address">
-        m. Warszawa, Aleje Jerozolimskie 21
-        <a class="contact" href="mailto:info@example.com"> info@example.com </a>
-        <a class="contact" href="tel:+48111111111"> +48 111 111 111 </a>
-      </address>
+      <div class="wrapper footer-container">
+        <a class="logo" href="index.html"><span class="logo-color">Web</span>Studio</a>
+        <address class="address-container">
+          <span class="address">m. Warszawa, Aleje Jerozolimskie 21</span>
+          <a class="contact" href="mailto:info@example.com"> info@example.com </a>
+          <a class="contact" href="tel:+48111111111"> +48 111 111 111 </a>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
