--- a/portfolio.html
+++ b/portfolio.html
@@ -13,146 +13,165 @@
   </head>
   <body>
     <header class="menu">
-      <a class="logo" href="index.html"><span class="logo-color">Web</span>Studio</a>
-      <nav>
-        <ul class="nav-list">
-          <li class="nav-list-item">
-            <a class="nav-list-item-link" href="agency.html">Agencja</a>
-          </li>
-          <li class="nav-list-item">
-            <a class="nav-list-item-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-list-item">
-            <a class="nav-list-item-link" href="contact.html">Kontakt</a>
-          </li>
+      <nav class="wrapper main-menu-container">
+        <div class="menu-container">
+          <a class="logo" href="index.html"><span class="logo-color">Web</span>Studio</a>
+          <ul class="nav-list">
+            <li class="nav-list-item">
+              <a class="nav-list-item-link" href="agency.html">Agencja</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-item-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-item-link" href="contact.html">Kontakt</a>
+            </li>
+          </ul>
+        </div>
+
+        <ul class="contact-list menu-container">
+          <li><a class="contact" href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
+          <li><a class="contact" href="tel:+48111111111"> +48 111 111 111 </a></li>
         </ul>
       </nav>
-      <a class="contact" href="mailto:info@devstudio.com"> info@devstudio.com </a>
-      <a class="contact" href="tel:+48111111111"> +48 111 111 111 </a>
     </header>
     <main>
-      <div class="filters">
-        <ul class="filters-list">
-          <li class="filters-item">
-            <button class="filters-button" type="button">Wszystkie</button>
-          </li>
-          <li class="filters-item">
-            <button class="filters-button" type="button">Strony</button>
-          </li>
-          <li class="filters-item">
-            <button class="filters-button" type="button">Aplikacje</button>
-          </li>
-          <li class="filters-item">
-            <button class="filters-button" type="button">Dizajn</button>
-          </li>
-          <li class="filters-item">
-            <button class="filters-button" type="button">Marketing</button>
-          </li>
-        </ul>
-      </div>
-      <div class="projects">
-        <ul class="projects-list">
-          <li class="projects-list-item">
-            <figure>
-              <img src="/images/portfolio/technocrack.jpg" alt="Website" height="294" width="370" />
-              <figcaption>
-                <p class="projects-name">Technorack</p>
-                <p class="projects-description">Strona internetowa</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="projects-list-item">
-            <figure>
-              <img
-                src="/images/portfolio/newOrlean.jpg"
-                alt="Basketball players"
-                height="294"
-                width="370"
-              />
-              <figcaption>
-                <p class="projects-name">Grafika New Orlean vs Golden Star</p>
-                <p class="projects-description">Dizajn</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="projects-list-item">
-            <figure>
-              <img
-                src="images/portfolio/seafood.jpg"
-                alt="Restaurant logo"
-                height="294"
-                width="370"
-              />
-              <figcaption>
-                <p class="projects-name">Restauracja Seafood</p>
-                <p class="projects-description">Aplikacja</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="projects-list-item">
-            <figure>
-              <img src="images/portfolio/prime.jpg" alt="Headphones" height="294" width="370" />
-              <figcaption>
-                <p class="projects-name">Projekt Prime</p>
-                <p class="projects-description">Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="projects-list-item">
-            <figure>
-              <img src="images/portfolio/boxes.jpg" alt="Boxes" height="294" width="370" />
-              <figcaption>
-                <p class="projects-name">Projekt Boxes</p>
-                <p class="projects-description">Aplikacja</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="projects-list-item">
-            <figure>
-              <img src="images/portfolio/noBorders.jpg" alt="Website" height="294" width="370" />
-              <figcaption>
-                <p class="projects-name">Inspiration has no Borders</p>
-                <p class="projects-description">Strona internetowa</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="projects-list-item">
-            <figure>
-              <img src="images/portfolio/magazyn.jpg" alt="Magazine" height="294" width="370" />
-              <figcaption>
-                <p class="projects-name">Magazyn Limited Edition</p>
-                <p class="projects-description">Dizajn</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="projects-list-item">
-            <figure>
-              <img src="images/portfolio/lab.jpg" alt="Label tag" height="294" width="370" />
-              <figcaption>
-                <p class="projects-name">Projekt LAB</p>
-                <p class="projects-description">Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="projects-list-item">
-            <figure>
-              <img src="images/portfolio/growingBusiness.jpg" alt="App" height="294" width="370" />
-              <figcaption>
-                <p class="projects-name">Growing Business</p>
-                <p class="projects-description">Aplikacja</p>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
-      </div>
+      <section class="porfolio-section wrapper">
+        <nav>
+          <ul class="filters-list-container">
+            <li class="filters-item">
+              <button class="filters-button" type="button">Wszystkie</button>
+            </li>
+            <li class="filters-item">
+              <button class="filters-button" type="button">Strony</button>
+            </li>
+            <li class="filters-item">
+              <button class="filters-button" type="button">Aplikacje</button>
+            </li>
+            <li class="filters-item">
+              <button class="filters-button" type="button">Dizajn</button>
+            </li>
+            <li class="filters-item">
+              <button class="filters-button" type="button">Marketing</button>
+            </li>
+          </ul>
+        </nav>
+        <div class="projects-section">
+          <ul class="projects-list-container">
+            <li class="projects-list-item">
+              <figure class="projects-list-item">
+                <img
+                  src="/images/portfolio/technocrack.jpg"
+                  alt="Website"
+                  height="294"
+                  width="370"
+                />
+                <figcaption class="projects-caption">
+                  <p class="projects-name">Technorack</p>
+                  <p class="projects-description">Strona internetowa</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="projects-list-item">
+              <figure class="projects-list-item">
+                <img
+                  src="/images/portfolio/newOrlean.jpg"
+                  alt="Basketball players"
+                  height="294"
+                  width="370"
+                />
+                <figcaption class="projects-caption">
+                  <p class="projects-name">Grafika New Orlean vs Golden Star</p>
+                  <p class="projects-description">Dizajn</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="projects-list-item">
+              <figure class="projects-list-item">
+                <img
+                  src="images/portfolio/seafood.jpg"
+                  alt="Restaurant logo"
+                  height="294"
+                  width="370"
+                />
+                <figcaption class="projects-caption">
+                  <p class="projects-name">Restauracja Seafood</p>
+                  <p class="projects-description">Aplikacja</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="projects-list-item">
+              <figure class="projects-list-item">
+                <img src="images/portfolio/prime.jpg" alt="Headphones" height="294" width="370" />
+                <figcaption class="projects-caption">
+                  <p class="projects-name">Projekt Prime</p>
+                  <p class="projects-description">Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="projects-list-item">
+              <figure class="projects-list-item">
+                <img src="images/portfolio/boxes.jpg" alt="Boxes" height="294" width="370" />
+                <figcaption class="projects-caption">
+                  <p class="projects-name">Projekt Boxes</p>
+                  <p class="projects-description">Aplikacja</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="projects-list-item">
+              <figure class="projects-list-item">
+                <img src="images/portfolio/noBorders.jpg" alt="Website" height="294" width="370" />
+                <figcaption class="projects-caption">
+                  <p class="projects-name">Inspiration has no Borders</p>
+                  <p class="projects-description">Strona internetowa</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="projects-list-item">
+              <figure class="projects-list-item">
+                <img src="images/portfolio/magazyn.jpg" alt="Magazine" height="294" width="370" />
+                <figcaption class="projects-caption">
+                  <p class="projects-name">Magazyn Limited Edition</p>
+                  <p class="projects-description">Dizajn</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="projects-list-item">
+              <figure class="projects-list-item">
+                <img src="images/portfolio/lab.jpg" alt="Label tag" height="294" width="370" />
+                <figcaption class="projects-caption">
+                  <p class="projects-name">Projekt LAB</p>
+                  <p class="projects-description">Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="projects-list-item">
+              <figure class="projects-list-item">
+                <img
+                  src="images/portfolio/growingBusiness.jpg"
+                  alt="App"
+                  height="294"
+                  width="370"
+                />
+                <figcaption class="projects-caption">
+                  <p class="projects-name">Growing Business</p>
+                  <p class="projects-description">Aplikacja</p>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="index.html"><span class="logo-color">Web</span>Studio</a>
-      <address class="address">
-        m. Warszawa, Aleje Jerozolimskie 21
-        <a class="contact" href="mailto:info@example.com"> info@example.com </a>
-        <a class="contact" href="tel:+48111111111"> +48 111 111 111 </a>
-      </address>
+      <div class="wrapper footer-container">
+        <a class="logo" href="index.html"><span class="logo-color">Web</span>Studio</a>
+        <address class="address-container">
+          <span class="address">m. Warszawa, Aleje Jerozolimskie 21</span>
+          <a class="contact" href="mailto:info@example.com"> info@example.com </a>
+          <a class="contact" href="tel:+48111111111"> +48 111 111 111 </a>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
