--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
               <li>
                 <figure class="team-section-item">
                   <img
+                    class="team-section-pic"
                     src="images/employees/productDesigner.jpg"
                     alt="Product Designer"
                     height="260"
@@ -139,6 +140,7 @@
               <li>
                 <figure class="team-section-item">
                   <img
+                    class="team-section-pic"
                     src="images/employees/frontendDeveloper.jpg"
                     alt="Frontend Developer"
                     height="260"
@@ -153,6 +155,7 @@
               <li>
                 <figure class="team-section-item">
                   <img
+                    class="team-section-pic"
                     src="images/employees/marketing.jpg"
                     alt="Marketing"
                     height="260"
@@ -167,6 +170,7 @@
               <li>
                 <figure class="team-section-item">
                   <img
+                    class="team-section-pic"
                     src="images/employees/uiDesigner.jpg"
                     alt="UI Designer"
                     height="260"
