--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,7 @@
             <li class="projects-list-item">
               <figure class="projects-list-item">
                 <img
+                  class="projects-pic"
                   src="/images/portfolio/technocrack.jpg"
                   alt="Website"
                   height="294"
@@ -75,6 +76,7 @@
             <li class="projects-list-item">
               <figure class="projects-list-item">
                 <img
+                  class="projects-pic"
                   src="/images/portfolio/newOrlean.jpg"
                   alt="Basketball players"
                   height="294"
@@ -89,6 +91,7 @@
             <li class="projects-list-item">
               <figure class="projects-list-item">
                 <img
+                  class="projects-pic"
                   src="images/portfolio/seafood.jpg"
                   alt="Restaurant logo"
                   height="294"
@@ -102,7 +105,13 @@
             </li>
             <li class="projects-list-item">
               <figure class="projects-list-item">
-                <img src="images/portfolio/prime.jpg" alt="Headphones" height="294" width="370" />
+                <img
+                  class="projects-pic"
+                  src="images/portfolio/prime.jpg"
+                  alt="Headphones"
+                  height="294"
+                  width="370"
+                />
                 <figcaption class="projects-caption">
                   <p class="projects-name">Projekt Prime</p>
                   <p class="projects-description">Marketing</p>
@@ -111,7 +120,13 @@
             </li>
             <li class="projects-list-item">
               <figure class="projects-list-item">
-                <img src="images/portfolio/boxes.jpg" alt="Boxes" height="294" width="370" />
+                <img
+                  class="projects-pic"
+                  src="images/portfolio/boxes.jpg"
+                  alt="Boxes"
+                  height="294"
+                  width="370"
+                />
                 <figcaption class="projects-caption">
                   <p class="projects-name">Projekt Boxes</p>
                   <p class="projects-description">Aplikacja</p>
@@ -120,7 +135,13 @@
             </li>
             <li class="projects-list-item">
               <figure class="projects-list-item">
-                <img src="images/portfolio/noBorders.jpg" alt="Website" height="294" width="370" />
+                <img
+                  class="projects-pic"
+                  src="images/portfolio/noBorders.jpg"
+                  alt="Website"
+                  height="294"
+                  width="370"
+                />
                 <figcaption class="projects-caption">
                   <p class="projects-name">Inspiration has no Borders</p>
                   <p class="projects-description">Strona internetowa</p>
@@ -129,7 +150,13 @@
             </li>
             <li class="projects-list-item">
               <figure class="projects-list-item">
-                <img src="images/portfolio/magazyn.jpg" alt="Magazine" height="294" width="370" />
+                <img
+                  class="projects-pic"
+                  src="images/portfolio/magazyn.jpg"
+                  alt="Magazine"
+                  height="294"
+                  width="370"
+                />
                 <figcaption class="projects-caption">
                   <p class="projects-name">Magazyn Limited Edition</p>
                   <p class="projects-description">Dizajn</p>
@@ -138,7 +165,13 @@
             </li>
             <li class="projects-list-item">
               <figure class="projects-list-item">
-                <img src="images/portfolio/lab.jpg" alt="Label tag" height="294" width="370" />
+                <img
+                  class="projects-pic"
+                  src="images/portfolio/lab.jpg"
+                  alt="Label tag"
+                  height="294"
+                  width="370"
+                />
                 <figcaption class="projects-caption">
                   <p class="projects-name">Projekt LAB</p>
                   <p class="projects-description">Marketing</p>
@@ -148,6 +181,7 @@
             <li class="projects-list-item">
               <figure class="projects-list-item">
                 <img
+                  class="projects-pic"
                   src="images/portfolio/growingBusiness.jpg"
                   alt="App"
                   height="294"
